
plugins {
    id 'com.twitter.teruteru128.study.java-application-conventions'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

compileJava {
    options.fork = true
    options.forkOptions.setMemoryInitialSize('16G')
    options.forkOptions.setMemoryMaximumSize('16G')
    options.compilerArgs += ['--enable-preview'
    //, '-Xlint:preview'
    ]
}

application {
    mainModule = 'com.twitter.teruteru.preview'
    mainClass = 'com.twitter.teruteru128.preview.Main'
    applicationDefaultJvmArgs = ['--enable-preview', '--enable-native-access=com.twitter.teruteru.preview', '-Xms64G', '-Xmx64G']
}
